#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddl
#------------------------------------------------------------------------

Package author: Andy Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-06
2012-09-11 Andy Salnikov
- DdlPythonInterfaces: generated stuff goes to a separate namespace

Tag: V00-02-05
2012-07-27 Andy Salnikov
- XmlReader: elementTree in 2.7 comes from xml package, make imports
  work both in 2.4 and 2.5+

Tag: V00-02-04
2012-07-08 Joseph S. Barrera III
- Added psana python support in new file DdlPythonInterfaces.py.
- Removed psana python support from DdlPsanaInterfaces.py and CppTypeCodegen.py.

Tag: V00-02-03
2012-05-07 Andy Salnikov
- fix for missing include file causing psddlc crash with incorrect
  dignostics

Tag: V00-02-02
2012-05-03 Andy Salnikov
- DdlPds2Psana did not pass all arguments to forwarded modules

Tag: V00-02-01
2012-05-02 Andy Salnikov
- bug fix for latest commit, _parent should have been renamed to 
  parent everywhere
- forgot to add few files to svn

Tag: V00-02-00
2012-05-02 Andy Salnikov
- bitfieds now have accessor attribute which generates methods
  for accessing bitfield values
- above is needed to generate (calls to) constructors which take
  bitfield values, auto-generated constructors now accept
  bitfield values instead of whole attribute value
- more progress on HDF5 generator, Xml parser now has code
  to parse HDF5 schema

Tag: V00-01-03
2012-01-12 Andy Salnikov
- use templates ($name substitution) instead of formatting (%s) for 
  code generation in many places.
- at some point it may be beneficial to switch to more advanced
  templating system than to keep all stuff in Python code.

Tag: V00-01-02
2012-01-12 Andy Salnikov
- extending method generation capabilities